Don't crash on an empty print preview, just provide an empty preview.

https://bugzilla.gnome.org/show_bug.cgi?id=581282